@@ -205,6 +205,126 @@ private:
   // here is the stack of graphs which form the hierarchy
   Apollonius_graph_base*   hierarchy[ag_hierarchy_2__maxlevel];
   Random random; // random generator
+
+public:
+  template<class OutputItFaces, class OutputItBoundaryEdges,
+	   class OutputItHiddenVertices>
+  boost::tuples::tuple<OutputItFaces, OutputItBoundaryEdges,
+		       OutputItHiddenVertices>
+  get_conflicts_and_boundary_and_hidden_vertices(const Site_2& p,
+						 OutputItFaces fit,
+						 OutputItBoundaryEdges eit,
+						 OutputItHiddenVertices vit,
+						 Vertex_handle start =
+						 Vertex_handle()) const
+  {
+    Vertex_handle vnearest = nearest_neighbor(p.point(), start);
+    return this->get_all(p, fit, eit, vit, vnearest, false);
+  }
+
+  template<class OutputItFaces, class OutputItBoundaryEdges>
+  std::pair<OutputItFaces, OutputItBoundaryEdges>
+  get_conflicts_and_boundary(const Site_2& p,
+			     OutputItFaces fit,
+			     OutputItBoundaryEdges eit,
+			     Vertex_handle start =
+			     Vertex_handle()) const {
+    boost::tuples::tuple<OutputItFaces,OutputItBoundaryEdges,Emptyset_iterator>
+      tup =
+      get_conflicts_and_boundary_and_hidden_vertices(p,
+						     fit,
+						     eit,
+						     Emptyset_iterator(),
+						     start);
+    return std::make_pair( boost::tuples::get<0>(tup),
+			   boost::tuples::get<1>(tup) );
+  }
+
+
+  template<class OutputItBoundaryEdges, class OutputItHiddenVertices>
+  std::pair<OutputItBoundaryEdges, OutputItHiddenVertices>
+  get_boundary_of_conflicts_and_hidden_vertices(const Site_2& p,
+						OutputItBoundaryEdges eit,
+						OutputItHiddenVertices vit,
+						Vertex_handle start =
+						Vertex_handle()) const {
+    boost::tuples::tuple<Emptyset_iterator,OutputItBoundaryEdges,
+      OutputItHiddenVertices>
+      tup =
+      get_conflicts_and_boundary_and_hidden_vertices(p,
+						     Emptyset_iterator(),
+						     eit,
+						     vit,
+						     start);
+    return std::make_pair( boost::tuples::get<1>(tup),
+			   boost::tuples::get<2>(tup) );
+  }
+
+
+  template<class OutputItFaces, class OutputItHiddenVertices>
+  std::pair<OutputItFaces, OutputItHiddenVertices>
+  get_conflicts_and_hidden_vertices(const Site_2& p,
+				    OutputItFaces fit,
+				    OutputItHiddenVertices vit,
+				    Vertex_handle start =
+				    Vertex_handle()) const {
+    boost::tuples::tuple<OutputItFaces,Emptyset_iterator,
+      OutputItHiddenVertices>
+      tup =
+      get_conflicts_and_boundary_and_hidden_vertices(p,
+						     fit,
+						     Emptyset_iterator(),
+						     vit,
+						     start);
+    return std::make_pair( boost::tuples::get<0>(tup),
+			   boost::tuples::get<2>(tup) );
+  }
+
+  template<class OutputItFaces>
+  OutputItFaces get_conflicts(const Site_2& p,
+			      OutputItFaces fit,
+			      Vertex_handle start = Vertex_handle()) const {
+    boost::tuples::tuple<OutputItFaces,Emptyset_iterator,Emptyset_iterator>
+      tup =
+      get_conflicts_and_boundary_and_hidden_vertices(p,
+						     fit,
+						     Emptyset_iterator(),
+						     Emptyset_iterator(),
+						     start);
+    return boost::tuples::get<0>(tup);
+  }
+
+  template<class OutputItBoundaryEdges>
+  OutputItBoundaryEdges
+  get_boundary_of_conflicts(const Site_2& p,
+			    OutputItBoundaryEdges eit,
+			    Vertex_handle start = Vertex_handle()) const {
+    boost::tuples::tuple<Emptyset_iterator,OutputItBoundaryEdges,
+      Emptyset_iterator>
+      tup =
+      get_conflicts_and_boundary_and_hidden_vertices(p,
+						     Emptyset_iterator(),
+						     eit,
+						     Emptyset_iterator(),
+						     start);
+    return boost::tuples::get<1>(tup);
+  }
+
+  template<class OutputItHiddenVertices>
+  OutputItHiddenVertices
+  get_hidden_vertices(const Site_2& p,
+		      OutputItHiddenVertices vit,
+		      Vertex_handle start = Vertex_handle()) const {
+    boost::tuples::tuple<Emptyset_iterator,Emptyset_iterator,
+      OutputItHiddenVertices>
+      tup =
+      get_conflicts_and_boundary_and_hidden_vertices(p,
+						     Emptyset_iterator(),
+						     Emptyset_iterator(),
+						     vit,
+						     start);
+    return boost::tuples::get<2>(tup);
+  }
 };
 
 
