@@ -1,3 +1,7 @@
+30 June 2005:  Menelaos Karavelas
+- added get_conflicts() methods (similar to those in regular and Delaunay
+  triangulations); need to update the doc and the testsuite also.
+
 26 June 2005:  Menelaos Karavelas
 - doc: added Triangulation_data_structure type and tds() method; also added
   that the Apollonius_graph_2 class is a model of the DelaunayGraph_2 concept.
